[Add] 2_elliptic_curve.ipynb

--- a/python/Bitcoin/1_finite_field.ipynb
+++ b/python/Bitcoin/1_finite_field.ipynb
@@ -23,10 +23,13 @@
     "        return self.num == other.num and self.prime == other.prime\n",
     "\n",
     "    def __ne__(self, other):\n",
+    "        '''\n",
     "        if other is None:\n",
     "            return False\n",
-    "        return self.num != other.num and self.prime != other.prime\n",
-    "\n",
+    "        return self.num != other.num or self.prime != other.prime\n",
+    "        '''\n",
+    "        return not (self == other)\n",
+    "        \n",
     "    def __add__(self, other):\n",
     "        if self.prime != other.prime:\n",
     "            raise TypeError('Cannot add two numbers in different Fields')\n",
@@ -38,6 +41,7 @@
     "            raise TypeError('Cannot subtract two numbers in different Fields')\n",
     "        num = (self.num - other.num) % self.prime\n",
     "        return self.__class__(num, self.prime)\n",
+    "    \n",
     "    def __mul__(self, other):\n",
     "        if self.prime != other.prime:\n",
     "            raise TypeError('Cannot multiply two numbers in different Fields')\n",
@@ -55,6 +59,7 @@
     "        n = exponent % (self.prime - 1)\n",
     "        num = pow(self.num, n, self.prime)\n",
     "        return self.__class__(num, self.prime)\n",
+    "    \n",
     "    def __truediv__(self, other):\n",
     "        if self.prime != other.prime:\n",
     "            raise TypeError('Cannot divide two numbers in different Fields')\n",
