[Add] algorithm_40_6.ipynb

--- a/python/Bitcoin/3_ecc.ipynb
+++ b/python/Bitcoin/3_ecc.ipynb
@@ -32,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ecc.Point object at 0x000001C8084AE0B0>\n"
+      "Point(192,105)_0_7 FieldElement(223)\n"
      ]
     }
    ],
@@ -51,6 +51,54 @@
     "y = FieldElement(105, 223)\n",
     "p1 = Point(x, y, a, b)\n",
     "print(p1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from unittest import TestCase\n",
+    "\n",
+    "class ECCTest(TestCase):\n",
+    "    def test_on_curve(self):\n",
+    "        prime = 223\n",
+    "        a = FieldElement(0, prime)\n",
+    "        b = FieldElement(7, prime)\n",
+    "        valid_points = ((192 ,105), (17, 56), (1, 193))\n",
+    "        invalid_points = ((200, 119), (42, 99))\n",
+    "        for x_raw, y_raw in valid_points:\n",
+    "            x = FieldElement(x_raw, prime)\n",
+    "            y = FieldElement(y_raw, prime)\n",
+    "            Point(x, y, a, b)\n",
+    "        for x_raw, y_raw in invalid_points:\n",
+    "            x = FieldElement(x_raw, prime)\n",
+    "            y = FieldElement(y_raw, prime)\n",
+    "            with self.assertRaises(ValueError):\n",
+    "                Point(x, y, a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "from helper import run\n",
+    "run(ECCTest('test_on_curve'))"
    ]
   },
   {
