[Edit] 3_ecc.iypnb

--- a/python/Bitcoin/3_ecc.ipynb
+++ b/python/Bitcoin/3_ecc.ipynb
@@ -103,6 +103,106 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(170,142)_0_7 FieldElement(223)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ecc import FieldElement, Point\n",
+    "prime = 223\n",
+    "a = FieldElement(num = 0, prime = prime)\n",
+    "b = FieldElement(7, prime)\n",
+    "x1 = FieldElement(192, prime)\n",
+    "y1 = FieldElement(105, prime)\n",
+    "x2 = FieldElement(17, prime)\n",
+    "y2 = FieldElement(56, prime)\n",
+    "p1 = Point(x1, y1, a, b)\n",
+    "p2 = Point(x2, y2, a, b)\n",
+    "print(p1 + p2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(220,181)_0_7 FieldElement(223)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1 = FieldElement(170, prime)\n",
+    "y1 = FieldElement(142, prime)\n",
+    "x2 = FieldElement(60, prime)\n",
+    "y2 = FieldElement(139, prime)\n",
+    "p1 = Point(x1, y1, a, b)\n",
+    "p2 = Point(x2, y2, a, b)\n",
+    "print(p1 + p2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 * (47, 71) = (47, 71)\n",
+      "2 * (47, 71) = (36, 111)\n",
+      "3 * (47, 71) = (15, 137)\n",
+      "4 * (47, 71) = (194, 51)\n",
+      "5 * (47, 71) = (126, 96)\n",
+      "6 * (47, 71) = (139, 137)\n",
+      "7 * (47, 71) = (92, 47)\n",
+      "8 * (47, 71) = (116, 55)\n",
+      "9 * (47, 71) = (69, 86)\n",
+      "10 * (47, 71) = (154, 150)\n",
+      "11 * (47, 71) = (154, 73)\n",
+      "12 * (47, 71) = (69, 137)\n",
+      "13 * (47, 71) = (116, 168)\n",
+      "14 * (47, 71) = (92, 176)\n",
+      "15 * (47, 71) = (139, 86)\n",
+      "16 * (47, 71) = (126, 127)\n",
+      "17 * (47, 71) = (194, 172)\n",
+      "18 * (47, 71) = (15, 86)\n",
+      "19 * (47, 71) = (36, 112)\n",
+      "20 * (47, 71) = (47, 152)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 점 덧셈은 비선형이고 계산하기 쉽지 않음\n",
+    "# 스칼라 곱셈은 어렵지 않지만 나눗셈은 그렇지 않다\n",
+    "# 이를 이산로그문제(discrete log problem)이라 하고, 타원곡선 암호 방법의 원리임\n",
+    "\n",
+    "# 스칼라 곱셈의 다른 성질은 어떤 점에 스칼라 값을 계속 증가시키면서 곱하면 무한원점(point at infinity)에 도달한다는 것\n",
+    "from ecc import FieldElement, Point\n",
+    "prime = 223\n",
+    "a = FieldElement(num = 0, prime = prime)\n",
+    "b = FieldElement(7, prime)\n",
+    "x = FieldElement(47, prime)\n",
+    "y = FieldElement(71, prime)\n",
+    "p = Point(x, y, a, b)\n",
+    "for s in range(1, 21):\n",
+    "    result = s * p\n",
+    "    print(f'{s} * (47, 71) = ({result.x.num}, {result.y.num})')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
