--- a/python/Bitcoin/3_ecc.ipynb
+++ b/python/Bitcoin/3_ecc.ipynb
@@ -405,14 +405,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Point(1153752822844410451703720272380683670327470420405725541447346968941621636178,4935740600172189071191766981850281297554521083605982627869195587800421042658)_0_7 FieldElement(115792089237316195423570985008687907853269984665640564039457584007908834671663)\n",
+      "S256Point(028d003eab2e428d11983f3e97c3fa0addf3b42740df0d211795ffb3be2f6c52, 0ae987b9ec6ea159c78cb2a937ed89096fb218d9e7594f02b547526d8cd309e2)\n",
       "0x231c6f3d980a6b0fb7152f85cee7eb52bf92433d9919b9c5218cb08e79cce78\n",
       "0x2b698a0f0a4041b77e63488ad48c23e8e8838dd1fb7520408b121697b782ef22\n",
       "0xbb14e602ef9e3f872e25fad328466b34e6734b7a0fcd58b1eb635447ffae8cb9\n"
@@ -433,6 +433,62 @@
     "print(hex(z))\n",
     "print(hex(r))\n",
     "print(hex(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S256Point(f01d6b9018ab421dd410404cb869072065522bf85734008f105cf385a023a80f, 0eba29d0f0c5408ed681984dc525982abefccd9f7ff01dd26da4999cf3f6a295)\n",
+      "0x969f6056aa26f7d2795fd013fe88868d09c9f6aed96965016e1936ae47060d48\n",
+      "0x2b698a0f0a4041b77e63488ad48c23e8e8838dd1fb7520408b121697b782ef22\n",
+      "0x1dbc63bfef4416705e602a7b564161167076d8b20990a0f26f316cff2cb0bc1a\n"
+     ]
+    }
+   ],
+   "source": [
+    "e = 12345\n",
+    "z = int.from_bytes(hash256(b'Programming Bitcoin!'), 'big')\n",
+    "k = 1234567890\n",
+    "r = (k * G).x.num\n",
+    "k_inv = pow(k, N - 2 , N)\n",
+    "s = (z + r * e) * k_inv % N\n",
+    "point = e * G\n",
+    "print(point)\n",
+    "print(hex(z))\n",
+    "print(hex(r))\n",
+    "print(hex(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from random import randint\n",
+    "class PrivateKey:\n",
+    "\n",
+    "    def __init__(self, secret):\n",
+    "        self.secret = secret\n",
+    "        self.point = secret * G\n",
+    "\n",
+    "    def hex(self):\n",
+    "        return f'{self.secret:x}'.zfill(64)\n",
+    "\n",
+    "    def sign(self, z):\n",
+    "        k = randint(0, N)\n",
+    "        r = (k * G).x.num\n",
+    "        k_inv = pow(k, N - 2, N)\n",
+    "        s = (z + r * self.secret) * k_inv % N\n",
+    "        if s > N/2:\n",
+    "            s = N - s\n",
+    "        return Signature(r, s)\n"
    ]
   },
   {
