--- a/python/ml_dl/chapter_5.ipynb
+++ b/python/ml_dl/chapter_5.ipynb
@@ -606,6 +606,287 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 랜덤 포레스트(Random Forest)\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "wine = pd.read_csv('https://bit.ly/wine_csv_data')\n",
+    "data = wine[['alcohol', 'sugar', 'pH']].to_numpy()\n",
+    "target = wine['class'].to_numpy()\n",
+    "train_input, test_input, train_target, test_target = train_test_split(data, target, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9973541965122431 0.8905151032797809\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "rf = RandomForestClassifier(n_jobs=-1, random_state=42)\n",
+    "scores = cross_validate(rf, train_input, train_target, return_train_score=True, n_jobs=-1)\n",
+    "print(np.mean(scores['train_score']), np.mean(scores['test_score']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.23167441 0.50039841 0.26792718]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf.fit(train_input, train_target)\n",
+    "print(rf.feature_importances_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8934000384837406\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf = RandomForestClassifier(oob_score=True, n_jobs=-1, random_state=42)\n",
+    "rf.fit(train_input, train_target)\n",
+    "print(rf.oob_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9974503966084433 0.8887848893166506\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 엑스트라 트리(Extra Tree)\n",
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "et = ExtraTreesClassifier(n_jobs=-1, random_state=42)\n",
+    "scores = cross_validate(et, train_input, train_target, return_train_score=True, n_jobs=-1)\n",
+    "print(np.mean(scores['train_score']), np.mean(scores['test_score']))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.20183568 0.52242907 0.27573525]\n"
+     ]
+    }
+   ],
+   "source": [
+    "et.fit(train_input, train_target)\n",
+    "print(et.feature_importances_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8881086892152563 0.8720430147331015\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 그레이디언트 부스팅(Gradient Boosting)\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "gb = GradientBoostingClassifier(random_state=42)\n",
+    "scores = cross_validate(gb, train_input, train_target, return_train_score=True, n_jobs=-1)\n",
+    "print(np.mean(scores['train_score']), np.mean(scores['test_score']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9464595437171814 0.8780082549788999\n"
+     ]
+    }
+   ],
+   "source": [
+    "gb = GradientBoostingClassifier(n_estimators=500, learning_rate=0.2, random_state=42)\n",
+    "scores = cross_validate(gb, train_input, train_target, return_train_score=True, n_jobs=-1)\n",
+    "print(np.mean(scores['train_score']), np.mean(scores['test_score']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.15872278 0.68011572 0.16116151]\n"
+     ]
+    }
+   ],
+   "source": [
+    "gb.fit(train_input, train_target)\n",
+    "print(gb.feature_importances_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Kang MinJae\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\experimental\\enable_hist_gradient_boosting.py:16: UserWarning: Since version 1.0, it is not needed to import enable_hist_gradient_boosting anymore. HistGradientBoostingClassifier and HistGradientBoostingRegressor are now stable and can be normally imported from sklearn.ensemble.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9321723946453317 0.8801241948619236\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 히스토그램 기반 그레이디언트 부스팅(Histogram-based Gradient Boosting)\n",
+    "from sklearn.experimental import enable_hist_gradient_boosting\n",
+    "from sklearn.ensemble import HistGradientBoostingClassifier\n",
+    "hgb = HistGradientBoostingClassifier(random_state=42)\n",
+    "scores = cross_validate(hgb, train_input, train_target, return_train_score=True)\n",
+    "print(np.mean(scores['train_score']), np.mean(scores['test_score']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.08876275 0.23438522 0.08027708]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.inspection import permutation_importance\n",
+    "\n",
+    "hgb.fit(train_input, train_target)\n",
+    "result = permutation_importance(hgb, train_input, train_target, n_repeats=10, random_state=42, n_jobs=-1)\n",
+    "print(result.importances_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.05969231 0.20238462 0.049     ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = permutation_importance(hgb, test_input, test_target, n_repeats=10, random_state=42, n_jobs=-1)\n",
+    "print(result.importances_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8723076923076923"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hgb.score(test_input, test_target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9555033709953124 0.8799326275264677\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pip install xgboost\n",
+    "from xgboost import XGBClassifier\n",
+    "xgb = XGBClassifier(tree_method='hist', random_state=42)\n",
+    "scores = cross_validate(xgb, train_input, train_target, return_train_score=True)\n",
+    "print(np.mean(scores['train_score']), np.mean(scores['test_score']))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
