[Add] Various Files

--- a/python/ai_boostcamp/day01.ipynb
+++ b/python/ai_boostcamp/day01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -476,10 +476,338 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "can't set attribute",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m c1\u001b[39m.\u001b[39;49mname \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mKorea\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: can't set attribute"
+     ]
+    }
+   ],
+   "source": [
+    "c1.name = 'Korea'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kang 25 coding\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Mangling(맹글링)\n",
+    "# 1. 클래스의 속성값을 외부에서 접근하기 힘들게 할 때 (private화)\n",
+    "# 2. 하위 클래스가 상위 클래스의 속성을 오버라이딩 하는 것을 막을 때\n",
+    "\n",
+    "class TestClass:\n",
+    "    def __init__(self):\n",
+    "        self.name = 'Kang'\n",
+    "        self.age = 25\n",
+    "        self.hobby = 'coding'\n",
+    "\n",
+    "man = TestClass()\n",
+    "print(man.name, man.age, man.hobby)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'TestClass' object has no attribute '__hobby'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [22], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__hobby \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mcoding\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m      7\u001b[0m man \u001b[39m=\u001b[39m TestClass()\n\u001b[1;32m----> 8\u001b[0m \u001b[39mprint\u001b[39m(man\u001b[39m.\u001b[39mname, man\u001b[39m.\u001b[39mage, man\u001b[39m.\u001b[39;49m__hobby)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'TestClass' object has no attribute '__hobby'"
+     ]
+    }
+   ],
+   "source": [
+    "class TestClass:\n",
+    "    def __init__(self):\n",
+    "        self.name = 'Kang'\n",
+    "        self.age = 25\n",
+    "        self.__hobby = 'coding'\n",
+    "\n",
+    "man = TestClass()\n",
+    "print(man.name, man.age, man.__hobby)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# double underscore(__): mangling, attribute 등에 접근할 수 없게 함\n",
+    "# single undersocre(_): 함수명 등 앞에 _를 사용하면 import를 할 수 없게 함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['_TestClass__hobby', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'age', 'name']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dir(man))\n",
+    "\n",
+    "# dir 함수를 써 보면 _TestClass__hobby 를 볼 수 있다.\n",
+    "# 따라서 완벽하게 보호해 주는 것은 아니고 접근이 어렵게 할 뿐이다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'coding'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# mangling의 정확한 의미는 attribute의 이름을 바꾸어주는 것!\n",
+    "man._TestClass__hobby"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function add at 0x0000012C2783FAC0>\n",
+      "<function add at 0x0000012C2783FAC0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "f = add\n",
+    "# 일급객체: 함수도 일급 객체이므로 변수에 할당 할 수 있고, 매개변수로 전달 가능하며 리턴할 수 있다.\n",
+    "\n",
+    "print(add)\n",
+    "print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f is add)\n",
+    "print(add(1, 2))\n",
+    "print(f(1, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "def sub(a, b):\n",
+    "    return a - b\n",
+    "\n",
+    "cal = [add, sub]\n",
+    "\n",
+    "for _ in cal:\n",
+    "    print(_(10, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 클로저(Closure)\n",
+    "# 외부 함수가 종료된 후에도 내부 함수가 외부 함수의 변수를 참조할 수 있도록 어딘가에 저장하는 함수\n",
+    "\n",
+    "# - 어떤 함수가 내부 함수일 것\n",
+    "# - 그 내부 함수가 외부 함수의 변수를 참조할 것\n",
+    "# - 외부 함수가 내부 함수를 리턴할 것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hello(msg):\n",
+    "    message = 'Hi, ' + msg\n",
+    "\n",
+    "    def say():\n",
+    "        print(message)\n",
+    "\n",
+    "    return say"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, Fox\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = hello('Fox')  # 클로저 생성\n",
+    "f()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__annotations__', '__builtins__', '__call__', '__class__', '__closure__', '__code__', '__defaults__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__get__', '__getattribute__', '__globals__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__kwdefaults__', '__le__', '__lt__', '__module__', '__name__', '__ne__', '__new__', '__qualname__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dir(f))\n",
+    "\n",
+    "# __closure__ 가 보인다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(f.__closure__))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<cell at 0x0000012C25D88610: str object at 0x0000012C2792B930>,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f.__closure__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__class__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'cell_contents']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dir(f.__closure__[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, Fox\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f.__closure__[0].cell_contents)"
+   ]
   }
  ],
  "metadata": {
@@ -498,7 +826,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
