[Add] Various Files

--- a/python/ai_boostcamp/coding_test.ipynb
+++ b/python/ai_boostcamp/coding_test.ipynb
@@ -115,10 +115,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(s):\n",
+    "    answer = 0\n",
+    "    split(s)\n",
+    "    return answer\n",
+    "\n",
+    "def split(s):\n",
+    "    cnt = 0\n",
+    "    if len(s) == 0: return\n",
+    "    a, b = 1, 0\n",
+    "    for i in range(1, len(s)):\n",
+    "        if s[i] == s[0]: a += 1\n",
+    "        else: b += 1\n",
+    "        if a == b:\n",
+    "            print(cnt, s[i + 1:])\n",
+    "            split(s[i + 1:])\n",
+    "            cnt += 1\n",
+    "            print(cnt)\n",
+    "        else: \n",
+    "            return cnt\n",
+    "    return cnt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 ccabba\n",
+      "3 ba\n",
+      "answer : 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"aaabbaccccabba\"\n",
+    "cnt = 1\n",
+    "while len(s) > 2:\n",
+    "    a, b = 1, 0\n",
+    "    for i in range(1, len(s)):\n",
+    "        if s[i] == s[0]:\n",
+    "            a += 1\n",
+    "        else:\n",
+    "            b += 1\n",
+    "        if a == b:\n",
+    "            s = s[i + 1:]\n",
+    "            cnt += 1\n",
+    "            print(cnt, s)\n",
+    "            break\n",
+    "\n",
+    "print('answer :', cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [111], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m                 answer \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     13\u001b[0m     \u001b[39mreturn\u001b[39;00m answer\n\u001b[1;32m---> 15\u001b[0m solution(\u001b[39m\"\u001b[39;49m\u001b[39maaabbaccccabba\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "Cell \u001b[1;32mIn [111], line 6\u001b[0m, in \u001b[0;36msolution\u001b[1;34m(s)\u001b[0m\n\u001b[0;32m      4\u001b[0m a, b \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m, \u001b[39m0\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39mlen\u001b[39m(s)):\n\u001b[1;32m----> 6\u001b[0m     \u001b[39mif\u001b[39;00m s[i] \u001b[39m==\u001b[39m s[\u001b[39m0\u001b[39m]:\n\u001b[0;32m      7\u001b[0m         a \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m      8\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[1;31mIndexError\u001b[0m: string index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "def solution(s):\n",
+    "    answer = 0\n",
+    "    while s != '':\n",
+    "        a, b = 1, 0\n",
+    "        for i in range(1, len(s)):\n",
+    "            if s[i] == s[0]:\n",
+    "                a += 1\n",
+    "            else:\n",
+    "                b += 1\n",
+    "            if a == b:\n",
+    "                s = s[i + 1:]\n",
+    "                answer += 1\n",
+    "    return answer\n",
+    "\n",
+    "solution(\"aaabbaccccabba\")"
+   ]
   }
  ],
  "metadata": {
@@ -137,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
