--- a/python/hands_on_machine_learning/gpu_test.ipynb
+++ b/python/hands_on_machine_learning/gpu_test.ipynb
@@ -116,6 +116,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[name: \"/device:CPU:0\"\n",
+       " device_type: \"CPU\"\n",
+       " memory_limit: 268435456\n",
+       " locality {\n",
+       " }\n",
+       " incarnation: 6137027848202338899\n",
+       " xla_global_id: -1,\n",
+       " name: \"/device:GPU:0\"\n",
+       " device_type: \"GPU\"\n",
+       " memory_limit: 5748293632\n",
+       " locality {\n",
+       "   bus_id: 1\n",
+       "   links {\n",
+       "   }\n",
+       " }\n",
+       " incarnation: 12963511922436827024\n",
+       " physical_device_desc: \"device: 0, name: NVIDIA GeForce RTX 3060 Ti, pci bus id: 0000:01:00.0, compute capability: 8.6\"\n",
+       " xla_global_id: 416903419]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from tensorflow.python.client import device_lib\n",
+    "device_lib.list_local_devices()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "print(torch.cuda.is_available())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -138,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
