--- a/python/deep_learning/review.ipynb
+++ b/python/deep_learning/review.ipynb
@@ -472,10 +472,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "arr.argmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# np.argmax 함수의 경우 파이썬 리스트에도 적용이 가능함\n",
+    "# 반면에 arr.argmax() 같은 경우는 ndarray에서 사용 가능한 메서드\n",
+    "lst = [1, 2, 3, 4]\n",
+    "np.argmax(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.5, 3.5, 4.5])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 통계함수의 경우 축을 지정하여 사용할 수 있음\n",
+    "\n",
+    "arr.mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## 브로드캐스트(broadcast)\n",
+    "# ndarray간의 연산 시 배열의 행과 열을 자동으로 큰 쪽으로 맞춰줌\n",
+    "x = np.arange(6).reshape(2, 3)\n",
+    "y = np.arange(2).reshape(2, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x + y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 5 0]\n",
+      " [3 3 3]\n",
+      " [1 3 5]\n",
+      " [2 4 0]\n",
+      " [0 4 2]]\n",
+      "[[1 0 1]\n",
+      " [1 0 0]\n",
+      " [1 1 1]\n",
+      " [1 0 1]\n",
+      " [0 1 0]]\n",
+      "[[4 5 0]\n",
+      " [4 5 0]\n",
+      " [4 5 0]]\n",
+      "[4 0 3 1 3 5 2 0 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "def make_image(width, height):\n",
+    "    image = np.random.randint(0, 6, (height, width))\n",
+    "    return image\n",
+    "\n",
+    "def change_little(matrix):\n",
+    "    shape = matrix.shape\n",
+    "    rand = np.random.randint(0, 2, shape)\n",
+    "    return rand\n",
+    "\n",
+    "img = make_image(3, 5)\n",
+    "rand = change_little(img)\n",
+    "temp = np.array([[1, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0]])\n",
+    "print(img)\n",
+    "print(rand)\n",
+    "print(img[temp[1]])\n",
+    "print(img[rand == 1])"
+   ]
   }
  ],
  "metadata": {
